# statefs-providers

./: .gitignore  CMakeLists.txt  README
doc/: CMakeLists.txt  Doxyfile.in  main.dox
include/statefs/qt/: dbus.hpp  ns.hpp
inout/: inout_cellular.conf  inout_power.conf
rpm/: SpecGenerator.py  generate-spec-opensuse-generic.py  generate-spec.py  statefs-providers.spec  statefs-providers.spec.tpl
src/back_cover/: provider_back_cover.cpp
src/bluez/: CMakeLists.txt  common.h  provider_bluez.cpp  provider_bluez.hpp
src/bme/: bmeipc.c  bmeipc.h  provider_bme.cpp  provider_bme.hpp
src/connman/: CMakeLists.txt  dbus_types.hpp  net.connman.notification.xml  net.connman.service.xml  provider_connman.cpp  provider_connman.hpp
src/keyboard_generic/: CMakeLists.txt  provider_keyboard_generic.cpp
src/mce/: CMakeLists.txt  mce.xml  provider_mce.cpp  provider_mce.hpp
src/ofono/: CMakeLists.txt  dbus_types.hpp  org.ofono.networkregistration.xml  org.ofono.simtoolkit.xml  org.ofono.voicecallmanager.xml  provider_ofono.cpp  provider_ofono.hpp
src/power_udev/: CMakeLists.txt  provider_power_udev.cpp
src/profile/: CMakeLists.txt  dbus_types.hpp  provider_profile.cpp  provider_profile.hpp
src/sensors/: CMakeLists.txt  provider_sensors.cpp
src/udev/: CMakeLists.txt  provider_udev.cpp
src/upower/: CMakeLists.txt  DBus.Properties.xml  provider_upower.cpp  provider_upower.hpp
src/util/: CMakeLists.txt
tests/: CMakeLists.txt  statefs-providers-qt5-m2.cpp  statefs-providers-qt5-main.cpp
tools/: power-diagnostics.sh
